# wdsync

./: .gitignore  .pre-commit-config.yaml  .wdsync.example  CHANGELOG.md  LICENSE  README.md  SETUP.md  logging_config.py  pyproject.toml
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  DEVELOPER_SETUP.md  IN_DEVELOPMENT.md
scripts/: sonar-scan.sh
scripts/bash/: wdsync  wdsync-init
scripts/fish/: wdsync-init.fish  wdsync.fish
src/wdsync/: __init__.py  __main__.py  cli.py  config.py  deleter.py  direction.py  doctor.py  exceptions.py  formatters.py  git_dest.py  git_source.py  manifest.py  models.py  path_utils.py  planner.py  runner.py  shell.py  status_parser.py  sync.py
src/wdsync/cli/: commands.py
src/wdsync/core/: codec.py  config.py  deinit.py  environment.py  exceptions.py  interop.py  logging.py  models.py  path_utils.py  protocol.py  runner.py
src/wdsync/git/: dest.py  fingerprint.py  source.py  status_parser.py
src/wdsync/output/: formatters.py
src/wdsync/rpc/: client.py  connect.py  discovery.py  handlers.py  session.py
src/wdsync/shell/: assets.py
src/wdsync/sync/: conflict.py  context.py  deleter.py  direction.py  doctor.py  engine.py  manifest.py  planner.py
tests/: conftest.py  test_cli.py  test_config.py  test_crossenv_integration.py  test_deleter.py  test_direction.py  test_doctor.py  test_formatters.py  test_git_dest.py  test_git_source.py  test_integration.py  test_labels.py  test_main.py  test_manifest.py  test_path_utils.py  test_runner.py  test_shell.py  test_status_parser.py  test_sync.py
tests/cli/: test_commands.py
tests/core/: test_codec.py  test_config.py  test_environment.py  test_interop.py  test_labels.py  test_logging.py  test_main.py  test_path_utils.py  test_protocol.py  test_runner.py
tests/git/: test_dest.py  test_source.py  test_status_parser.py
tests/output/: test_formatters.py
tests/rpc/: test_client.py  test_connect.py  test_discovery.py  test_handlers.py  test_handlers_real.py  test_session.py
tests/shell/: test_assets.py
tests/sync/: test_conflict.py  test_context.py  test_deleter.py  test_direction.py  test_doctor.py  test_engine.py  test_manifest.py
